Fix nav scroller bar not showing sometimes

--- a/app/assets/stylesheets/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/dashboard/dashboard.scss
@@ -118,7 +118,6 @@ body {
   position: relative;
   z-index: 2;
   height: 2.75rem;
-  overflow-y: hidden;
 }
 
 .nav-scroller .nav {
